# legacy-asset-importer

./: .gitignore  .gitmodules  README.md  Uno.Native.sln  build.bat  build.sh  pack.sh  upload.sh
Native/: CMakeLists.txt  Doxyfile
Native/src/Common/: Math.h
Native/src/Fonts/: Atlas.cpp  Atlas.h  AtlasBuilder.cpp  AtlasBuilder.h  BinPacker.cpp  BinPacker.h  BitmapFont.cpp  BitmapFont.h  BitmapFontBuilder.cpp  BitmapFontBuilder.h  CMakeLists.txt  SdfFont.cpp  SdfFont.h  SdfFontBuilder.cpp  SdfFontBuilder.h  SpriteFont.cpp  SpriteFont.h
Native/src/uAsset/: Base.cpp  Base.h  CMakeLists.txt  FontFace.cpp  FontFace.h  Internal.cpp  Internal.h  Texture.cpp  Texture.h
Native/src/uAssetPlus/: CMakeLists.txt  GZip.cpp  GZip.h  SdfFont.cpp  SdfFont.h  SpriteFont.cpp  SpriteFont.h
Native/test/: CMakeLists.txt  FontFaceMT.cpp  TestFont.cpp  build.sh
Source/: gen.sh
Source/Uno.Native/: GZip.cs  NativeLib.AssetDll.cs  NativeLib.AssetPlusDll.cs  NativeLib.cs  NativeObject.cs  PlatformDetection.cs  Uno.Native.csproj  Win32.cs
Source/Uno.Native.Tests/: Program.cs  Uno.Native.Tests.csproj
Source/Uno.Native.Tests/Properties/: AssemblyInfo.cs
Source/Uno.Native/Fonts/: SdfFont.cs  SpriteFont.cs
Source/Uno.Native/Properties/: AssemblyInfo.cs
Source/Uno.Native/Textures/: Texture.cs  TextureCube2DMode.cs  TextureFileFormat.cs  TextureInfo.cs
